@startuml
' Configuración visual para Entidad-Relación
hide circle
skinparam linetype ortho
skinparam monochrome true
skinparam roundCorner 5

' --- LEYENDA EXPLICATIVA ---
legend right
  |= Símbolo |= Significado |
  | **.** | Campo obligatorio (Not Null) / Identificador |
  | **<<PK>>** | **Primary Key** (Clave Primaria): Identificador único del registro |
  | **<<FK>>** | **Foreign Key** (Clave Foránea): Referencia a una PK de otra tabla |
  | **\|\|** | Exactamente 1 |
  | **\|\|--o{** | **Relación "Uno a Muchos"**: Exactamente 1 (\|\|) se relaciona con 0 o muchos (o{) |
endlegend

' --- TABLAS DE DEFINICIÓN ESPACIAL ---

entity "grid_definition" as grid_definition {
  * definition_id : UUID <<PK>>
  --
  majortom_grid_name : VARCHAR
  distance_km: FLOAT
  min_latitude : FLOAT
  max_latitude : FLOAT
  min_longitude : FLOAT
  max_longitude : FLOAT
}

entity "grid_cell" as grid_cell {
  * cell_id : UUID <<PK>>
  --
  definition_id : UUID <<FK>>
  cell_bounds : GEOMETRY
  area_def : VARCHAR
  utm_region : VARCHAR
}

' --- TABLAS DE SENSORES Y PLATAFORMAS ---

entity "satellite" as satellite {
  * satellite_id : VARCHAR <<PK>>
  --
  satellite_name : VARCHAR
  organization : VARCHAR
}

entity "instrument" as instrument {
  * instrument_id : VARCHAR <<PK>>
  --
  satellite_id : VARCHAR <<FK>>
  instrument_name : VARCHAR
  sensor_type : VARCHAR
}

entity "channel" as channel {
  * channel_id : VARCHAR <<PK>>
  --
  instrument_id : VARCHAR <<FK>>
  satellite_id : VARCHAR <<FK>>
  channel_name : VARCHAR
  wavelength_central : FLOAT
  wavelength_unit : VARCHAR
}

' --- TABLAS DE DATOS Y DERIVADOS ---

entity "asset" as asset {
  * asset_id : UUID <<PK>>
  --
  provider : VARCHAR
  s3_url : VARCHAR
  http_url : VARCHAR
  timestamp : TIMESTAMP
}

entity "derivative" as derivative {
  * derivative_id : UUID <<PK>>
  --
  cell_id : UUID <<FK>>
  name : VARCHAR
  local_path : VARCHAR
  version : VARCHAR
  algorithm_name : VARCHAR
  creation_date : TIMESTAMP
}

' --- TABLAS INTERMEDIAS (MUCHOS A MUCHOS) ---

entity "asset_channel" as asset_channel {
  * asset_id : UUID <<PK, FK>>
  * channel_id : VARCHAR <<PK, FK>>
}

entity "asset_grid_cell" as asset_grid_cell {
  * asset_id : UUID <<PK, FK>>
  * cell_id : UUID <<PK, FK>>
}

entity "derivative_source" as derivative_source {
  * derivative_id : UUID <<PK, FK>>
  * asset_id : UUID <<PK, FK>>
  * channel_id : VARCHAR <<PK, FK>>
}

' --- RELACIONES ---

' Uno a Muchos
grid_definition ||--o{ grid_cell
satellite ||--o{ instrument
instrument ||--o{ channel
satellite ||--o{ channel
grid_cell ||--o{ derivative

' Relaciones con tablas intermedias
channel ||--o{ asset_channel
asset ||--o{ asset_channel

grid_cell ||--o{ asset_grid_cell
asset ||--o{ asset_grid_cell

' Relación del Derivado con el Origen Exacto (Asset + Channel)
asset_channel ||--o{ derivative_source : "provides data for"
derivative ||--o{ derivative_source : "generated from"
@enduml
